--- a/Random-Number-Generator/pom.xml
+++ b/Random-Number-Generator/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>SwitchScenes</artifactId>
+    <artifactId>Random-Number-Generator</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>SwitchScenes</name>
+    <name>Random-Number-Generator</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -70,7 +70,9 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.switchscenes/com.example.switchscenes.HelloApplication</mainClass>
+                            <mainClass>
+                                com.example.randomnumbergenerator/com.example.randomnumbergenerator.HelloApplication
+                            </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
